2001-04-02  Clint Adams  <schizo@debian.org>

 	* 13866: Completion/Debian/_apt: complete a release
	name after apt-get install <pkgname>/.

	* 13864: Completion/Debian/_apt: complete a
	"release" name after apt-get -t.

2001-04-01  Oliver Kiddle  <opk@zsh.org>

	* Completion/Builtins/_bindkey, Completion/Builtins/_compdef,
	Completion/Builtins/_disable, Completion/Builtins/_emulate,
	Completion/Builtins/_enable, Completion/Builtins/_fc,
	Completion/Builtins/_hash, Completion/Builtins/_print,
	Completion/Builtins/_read, Completion/Builtins/_unhash,
	Completion/Builtins/_vars_eq, Completion/Builtins/_which,
	Completion/Builtins/_zcompile, Completion/Builtins/_zle,
	Completion/Builtins/_zpty, Completion/Builtins/_zstyle,
	Completion/User/_bison, Completion/User/_bzip2, Completion/User/_dirs,
	Completion/User/_fetchmail, Completion/User/_gzip,
	Doc/Zsh/builtins.yo, Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo,
	Doc/Zsh/expn.yo: various doc fixes and minor changes to completion
	functions, including use of -A "-*" and -S options to _arguments.

2001-04-01  Chmouel Boudjnah  <chmouel@mandrakesoft.com>

	* 13861: Completion/Linux/_apm: Completion for apm command (linux only).

2001-03-30  Clint Adams  <schizo@debian.org>

	* 13860: Completion/Debian/_deb_packages: caching layer support.

2001-03-30  Peter Stephenson  <pws@csr.com>

	* 13851: Src/signals.c, Src/exec.c: don't exec final command in
	in list if any traps are set, since we don't know whether we will
	need to handle them when that command exits.

2001-03-30  Bart Schaefer  <schaefer@zsh.org>

	* 13846: Test/ztst.zsh: When "make check" is run with output to a
	tty, print a hash mark approximately once per second during tests
	to provide a "progress bar".

	* 13845: Doc/Zsh/options.yo, Src/options.c: Refuse `setopt noexec'
	in interactive shells, except at startup with `zsh -n'.

2001-03-29  Peter Stephenson  <pws@csr.com>

	* 13838: Src/prompt.c: don't assume we can change the string
	returned by getsparam("HOST").
